# aim-labs

./: 001_features_showcase.ipynb  002_matplotlib_deep_dive.ipynb  003_scikit-learn_deep_dive.ipynb  004_gpu_acceleration.ipynb  005_pytorch_and_einops.ipynb  006_huggingface_deep_dive.ipynb  Makefile  pyproject.toml
001_features_showcase/: main.go
002_matplotlib/: main.go
003_sklearn/: main.go
004_gpu_acceleration/: main.go
005_pytorch_and_einops/: main.go
006_huggingface_deep_dive/: main.go
008_api_development/: main.py  pyproject.toml  test.sh
008_api_development/voice-notes-app/: package.json
008_api_development/voice-notes-app/app/: globals.css  page.tsx
008_api_development/voice-notes-app/components/: backend-setup.tsx  draft-editor.tsx  note-detail.tsx  notes-list.tsx  recording-interface.tsx
