[project]
name = "labs"
version = "0.1.0"
description = "Lectures by Narendra Patwardhan"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "nbconvert[webpdf]>=7.16.6",
    "pandoc>=2.4",
    "papermill>=2.6.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]

[tool.uv.workspace]
members = ["008_api_development"]
